task3-istio/manifests/peerauthentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: ledger-api-mtls
  namespace: payments
spec:
  mtls:
    mode: STRICT
