task3-istio/manifests/destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: ledger-api
  namespace: payments
spec:
  host: ledger-api
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
