task3-istio/manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ledger-api
  namespace: payments
spec:
  hosts:
    - "*"
  gateways:
    - ledger-api-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: ledger-api
            port:
              number: 8080
